[package]
name = "chksum-hash-sha2"
version = "0.0.1"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.63.0"
description = "An implementation of SHA-2 hash algorithms for batch and stream computation."
readme = ".cargo/README.md"
repository = "https://github.com/chksum-rs/hash-sha2"
license = "MIT"
keywords = ["checksum", "digest", "hash", "sha2", "sha-2"]
categories = ["algorithms", "cryptography"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chksum-hash-sha2-224 = { version = "0.0.1", optional = true }
chksum-hash-sha2-256 = { version = "0.0.1", optional = true }
chksum-hash-sha2-384 = { version = "0.0.1", optional = true }
chksum-hash-sha2-512 = { version = "0.0.1", optional = true }

[features]
default = ["224", "256", "384", "512"]
224 = ["chksum-hash-sha2-224"]
256 = ["chksum-hash-sha2-256"]
384 = ["chksum-hash-sha2-384"]
512 = ["chksum-hash-sha2-512"]
